<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResultActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/ic_bg">

    <TextView
        android:id="@+id/tv_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/results"
        android:textColor="@color/white"
        android:textStyle="bold">

    </TextView>

    <ImageView
        android:id="@+id/iv_trophy"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:contentDescription="@string/results"
        app:srcCompat="@drawable/ic_trophy">

    </ImageView>

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/congratulations">

    </TextView>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:text="Username">

    </TextView>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/secondary_text_dark"
        android:textStyle="bold"
        tools:text="Your Score is 0 out of 18.">

    </TextView>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:textColor="@color/purple_700"
        android:text="@string/finish">

    </Button>

</LinearLayout>